<resources>
    <string name="app_name">Remember Me</string>
    <string name="enter_name">Enter your name</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="ok">OK</string>
    <string name="welcome_text">I will remind you to keep in touch with important people in your life.\nDon\'t let the concerns of life make them fade away!</string>
    <string name="start">Let\'s start</string>
    <string name="personal">Personal information</string>
    <string name="name">Name</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="version_no">1.00</string>
    <string name="developer">Developer</string>
    <string name="developer_mail">mohamed.wessam7@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="mobile">Mobile number</string>
    <string name="or">Or</string>
    <string name="chose_from_contacts"><u>Choose from contacts</u></string>
    <string name="relationship">Relationship</string>
    <string name="remind_me">Remind me to call every</string>
    <string name="remind_me_bd">Remind me to call in birth day</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_person">Add person</string>
    <string name="name_required">Name is required</string>
    <string name="phone_required">Phone is required</string>
    <string name="delete_message">Are you sure you want to delete</string>
    <string name="delete_title">Warning!</string>
    <string name="update">Update</string>
    <string name="enter_name_first">Please enter your name first</string>
    <string name="mail_copied">Email copied to clipboard</string>
    <string name="choose_language_first">Choose language first</string>
    <string name="welcome">Welcom</string>
    <string name="notification_title">Call</string>
    <string name="notification_txt1">Don\'t let life\'s concerns steal you from important people in your life.\nRemember to call</string>
    <string name="notification_txt2">today</string>
    <string name="change_language">Change language</string>

    <string-array name="relationship_array">
        <item>Other</item>
        <item>Family</item>
        <item>Friend</item>
        <item>Crash</item>
    </string-array>

    <string-array name="call_time_array">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Never</item>
    </string-array>
</resources>
