<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.login.FirstLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:layout_marginTop="@dimen/_34sdp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/et_user_name"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:hint="@string/enter_name"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_28sdp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/language"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_14ssp" />

        <RadioGroup
            android:id="@+id/rg_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <RadioButton
                android:id="@+id/rb_lan_ar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/arabic" />

            <RadioButton
                android:id="@+id/rb_lan_en"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="true"
                android:text="@string/english" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_ok"
            style="@style/ParentButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@drawable/btn_blue"
            android:text="@string/ok" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>