<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parent_settings_layout"
    tools:context=".ui.settings.SettingsActivity">

    <include layout="@layout/app_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:text="@string/personal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/_6sdp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_22sdp">

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="Mohamed Wessam"
                    android:textColor="@color/greyDark"
                    android:textSize="@dimen/_12ssp" />

                <ImageView
                    android:id="@+id/btn_edit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_edit" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:drawableStart="@drawable/ic_language"
                android:drawablePadding="@dimen/_6sdp"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:layout_marginBottom="@dimen/_6sdp">

                <TextView
                    android:id="@+id/tv_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/english"
                    android:textColor="@color/greyDark"
                    android:textSize="@dimen/_12ssp" />

                <ImageView
                    android:id="@+id/btn_edit_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_edit" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:text="@string/about"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:text="@string/version"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:text="@string/version_no"
                android:textColor="@color/greyDark"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/developer"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_22sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/developer_mail"
                    android:textColor="@color/greyDark"
                    android:textSize="@dimen/_12ssp" />

                <ImageView
                    android:id="@+id/btn_copy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_copy" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>