<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg_language_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:text="@string/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:text="@string/arabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_language_dialog">

        <Button
            android:id="@+id/btn_language_dialog_ok"
            style="@style/ParentButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="0.5"
            android:background="@drawable/btn_blue"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btn_language_dialog_cancel"
            style="@style/ParentButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="0.5"
            android:background="@drawable/btn_red"
            android:text="@string/cancel" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>