<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.addperson.AddPersonActivity">

    <include layout="@layout/app_bar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/border_blue"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/border_blue"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:weightSum="1">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.4"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/or" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.4"
                    android:background="@color/grey" />

            </LinearLayout>

            <TextView
                android:id="@+id/btn_open_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/buttons_bold"
                android:gravity="center"
                android:text="@string/chose_from_contacts"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@color/grey" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:text="@string/relationship"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_blue"
                android:paddingStart="@dimen/_8sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingBottom="@dimen/_4sdp">

                <Spinner
                    android:id="@+id/spinner_relationship"
                    android:entries="@array/relationship_array"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:text="@string/remind_me"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_blue"
                android:paddingStart="@dimen/_8sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingBottom="@dimen/_4sdp">

                <Spinner
                    android:id="@+id/spinner_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/call_time_array"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    style="@style/ParentButtonStyle"
                    android:id="@+id/btn_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_weight="0.5"
                    android:background="@drawable/btn_blue"
                    android:text="@string/add" />

                <Button
                    style="@style/ParentButtonStyle"
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_weight="0.5"
                    android:background="@drawable/btn_red"
                    android:text="@string/cancel" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>