<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_dialog_user"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:hint="@string/enter_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_dialog_user">

        <Button
            android:id="@+id/btn_dialog_ok"
            style="@style/ParentButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="0.5"
            android:background="@drawable/btn_blue"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btn_dialog_cancel"
            style="@style/ParentButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="0.5"
            android:background="@drawable/btn_red"
            android:text="@string/cancel" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>